# COLogger

./: .gitignore  CMakeLists.txt  COLogger.sln
COLogger/: CMakeLists.txt  COLogger.vcxproj  COLogger.vcxproj.filters  OutputLogger.cpp  OutputLogger.h  pch.h
